[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/MenuCoin.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scences/Start/Start.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="Start" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewBtn" type="Button" parent="Control"]
margin_left = 576.0
margin_top = 240.0
margin_right = 708.0
margin_bottom = 286.0
theme = SubResource( 1 )
text = "新游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueBtn" type="Button" parent="Control"]
margin_left = 552.0
margin_top = 432.0
margin_right = 724.0
margin_bottom = 478.0
theme = SubResource( 1 )
text = "继续游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Control/NewBtn" to="." method="_on_NewBtn_button_up"]
[connection signal="button_up" from="Control/ContinueBtn" to="." method="_on_ContinueBtn_button_up"]
